--- a/client/style.css
+++ b/client/style.css
@@ -131,10 +131,12 @@ img {
   #messageBoard {
     height: 20%;
   }
-  h1,
-  h2 {
-    display: flex;
-    align-items: center;
-    font-size: 1rem;
+  @media (max-width: 425px) {
+    h1,
+    h2 {
+      display: flex;
+      align-items: center;
+      font-size: 1rem;
+    }
   }
 }
