--- a/client/style.css
+++ b/client/style.css
@@ -131,11 +131,10 @@ img {
   #messageBoard {
     height: 20%;
   }
-  @media (max-width: 425px) {
-    h1,
-    h2 {
-      align-items: center;
-      font-size: 1rem;
-    }
+  h1,
+  h2 {
+    display: flex;
+    align-items: center;
+    font-size: 1rem;
   }
 }
